# openproxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  SPEC_LOG_DETAIL_MODAL.md  WEBSOCKET_LOGS_SPEC.md  config.example.toml  config.test.toml  docker-compose.yml  fix.patch  fix.py  fix2.patch  fix_end10.sh  fix_env.patch  fix_mutex.sh  fix_mutex3.sh  fix_mutex5.sh  fix_mutex6.sh  fix_mutex7.py  hash_test.rs  patch_admin_auth.diff  patch_auth_block.diff  run-dev.sh  test_antigravity_req.rs  test_async.rs  test_db.rs  test_decrypt_refresh.patch  test_hash.js  test_hash.rs  test_oauth_batch.patch  test_perf.rs  test_perf_final.rs  test_plan.md  test_redact.rs  test_regex.rs  test_resolve.rs
crates/openproxy-adapters/: Cargo.toml
crates/openproxy-adapters/src/: antigravity_headers.rs  lib.rs
crates/openproxy-adapters/src/adapters/: antigravity.rs  cloudflare_workers_ai.rs  codex.rs  custom_adapter.rs  factory.rs  gemini.rs  kilocode.rs  kiro_ai.rs  minimax.rs  mock.rs  mod.rs  nous_research.rs  nvidia_nim.rs  ollama_cloud.rs  opencode_zen.rs  openrouter.rs
crates/openproxy-adapters/src/upstream/: conn_pool.rs  mod.rs  phases.rs  profile.rs  response.rs
crates/openproxy-api-client/: Cargo.toml
crates/openproxy-api-client/src/: lib.rs
crates/openproxy-compression/: Cargo.toml
crates/openproxy-compression/benches/: compression.rs
crates/openproxy-compression/src/: compression.rs  content_router.rs  diff_compressor.rs  lib.rs  lite.rs  log_compressor.rs  mod.rs  smart_crusher.rs
crates/openproxy-compression/src/rtk/: command_detector.rs  line_filter.rs  mod.rs
crates/openproxy-core/: Cargo.toml
crates/openproxy-core/benches/: compression.rs  sse_fast_path.rs
crates/openproxy-core/migrations/: 000003_add_race_to_usage.sql  000004_add_race_size_to_combos.sql  000005_add_provider_timeouts.sql  000009_add_active_to_models.sql  000010_add_provider_keyword_and_model_status.sql  000012_add_account_quota.sql  000014_add_model_metadata.sql  000015_add_api_key_metadata.sql  000016_add_subcombo_support.sql  000017_add_target_cooldowns.sql  000019_add_oauth_support.sql  000020_set_antigravity_format_to_gemini.sql  000025_combo_targets_model_fk_set_null.sql  000026_combo_targets_upstream_model_id.sql  000027_oauth_device_tickets.sql  000028_add_stop_reason.sql  000030_combo_targets_cascade_on_model_delete.sql  000031_add_compression.sql  000035_combo_priority_modes.sql  000036_notifications.sql  000037_add_client_response.sql  000043_provider_proxies.sql  000044_add_responses_format.sql  000045_add_usage_winner_partial.sql
crates/openproxy-core/src/: accounts.rs  accounts.rs.diff  accounts.rs.orig  accounts.rs.rej  adapters.rs  admin.rs  analytics.rs  antigravity_headers.rs  api_keys.rs  bootstrap.rs  capabilities.rs  circuit_breaker.rs  combos.rs  config.rs  cooldown.rs  cost.rs  discovery_scheduler.rs  endpoint.rs  error.rs  executor_antigravity.rs  executor_codex.rs  executor_kiro.rs  free_proxies.rs  ids.rs  lib.rs  model_normalize.rs  models.rs  models_dev_sync.rs  notifications.rs  oauth.rs  oauth_antigravity.rs  oauth_codex.rs  oauth_gemini.rs  oauth_generic.rs  oauth_kiro.rs  oauth_tickets.rs  pipeline.rs  pipeline_repository_tests.rs  pricing.rs  providers.rs  (+18 more)
crates/openproxy-core/src/adapters/: antigravity.rs  cloudflare_workers_ai.rs  codex.rs  custom_adapter.rs  gemini.rs  kilocode.rs  kiro_ai.rs  minimax.rs  mod.rs  nous_research.rs  nvidia_nim.rs  (+3 more)
crates/openproxy-core/tests/: oauth_bench.rs  secrets_test.rs  sse_probe_role_repro.rs  sse_streaming_test.rs
crates/openproxy-db/: Cargo.toml
crates/openproxy-db/migrations/: 000001_initial_schema.sql  000002_add_timing_to_usage.sql  000006_add_model_timeout_overrides.sql  000008_add_error_msg_redacted.sql  000011_only_new_models_in_auto_activate.sql  000013_add_active_to_providers.sql  000018_add_gemini_format_and_goog_auth.sql  000021_add_none_auth_type.sql  000022_add_gemini_target_format.sql  000023_add_live_log_columns.sql  000024_add_app_config_kv.sql  000029_add_models_dev_sync.sql  000032_add_usage_analytics_indexes.sql  000033_add_model_id_normalized.sql  000034_combo_context_window.sql  000038_add_estimated_tokens.sql  000039_add_endpoint_kind.sql  000040_drop_provider_timeouts.sql  000041_add_quota_model_details.sql  000042_free_proxies.sql  000046_smart_warmup_history.sql  000047_add_proxy_logs.sql  000048_provider_rate_limit_scope.sql
crates/openproxy-db/src/: accounts.rs  app_config.rs  combos.rs  conn.rs  cooldowns.rs  cost.rs  error.rs  lib.rs  migrations.rs  models.rs  pricing.rs  providers.rs  secrets.rs
crates/openproxy-pipeline/: Cargo.toml
crates/openproxy-pipeline/src/: circuit_breaker.rs  context.rs  credentials.rs  execution.rs  executor_antigravity.rs  executor_kiro.rs  formatting.rs  lib.rs  load_balancing.rs  oauth.rs  pipeline.rs  quotas.rs  race_sink.rs  racing.rs  redact.rs  repository.rs  repository_tests.rs  retry.rs  schema_cleaner.rs  selection_registry.rs  service.rs  sse.rs  sse_accumulator.rs  stage.rs  streaming_state.rs  test_utils.rs  tests.rs  think_extractor.rs  timeouts.rs  translation.rs  upstream_dispatcher.rs  usage_tracker.rs  worker.rs
crates/openproxy-server/: Cargo.toml
crates/openproxy-server/src/: admin_ui.rs  debug_log.rs  disconnect.rs  error.rs  lib.rs  main.rs  rate_limit.rs  router.rs  state.rs  telemetry.rs
crates/openproxy-server/tests/: e2e_models_discovery.rs
crates/openproxy-server/web/: .gitignore  build.mjs  check_console.mjs  package.json  playwright-state.json  playwright.config.cjs  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml
crates/openproxy-types/: Cargo.toml
crates/openproxy-types/src/: accounts.rs  capabilities.rs  combos.rs  config.rs  context.rs  endpoint.rs  error.rs  ids.rs  lib.rs  message.rs  model_normalize.rs  models.rs  notifications.rs  providers.rs  quota.rs  selection_registry.rs  token_estimate.rs  usage.rs
crates/openproxy-web/: Cargo.toml  DESIGN.md  build.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
crates/openproxy-web/src/: api_proxy.rs  handlers.rs  lib.rs  main.rs
(+404 files in other folders)
