[workspace]
resolver = "2"
members = [
    "crates/openproxy-core",
    "crates/openproxy-server",
    "crates/openproxy-api-client",
    "crates/openproxy-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["openproxy contributors"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = { version = "0.12", features = ["send_guard"] }
rand = "0.8"
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
once_cell = "1"
tdigest = "0.2"
dashmap = "6"
toml = "0.8"
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
regex = "1.10"
sha2 = "0.10"
urlencoding = "2.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
