[workspace]
resolver = "2"
members = [
    "crates/openproxy-core",
    "crates/openproxy-server",
    "crates/openproxy-api-client",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.96"
license = "GPL-3.0"
authors = ["openproxy contributors"]

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
axum = "0.8"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
parking_lot = { version = "0.12", features = ["send_guard"] }
rand = "0.10"
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
once_cell = "1"
tdigest = "0.2"
dashmap = "6"
toml = "1.1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
regex = "1"
sha2 = "0.11"
zeroize = "1"
urlencoding = "2.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
