[package]
name = "openproxy-api-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
openproxy-core = { path = "../openproxy-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
http = "1.4.2"
bytes = "1.12.1"

[dev-dependencies]
httpmock = "0.8.3"
