[package]
name = "openproxy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
# Default-on: build the new `upstream/` hyper-based client alongside the
# `default-features = false`) for openproxy-core disables the module.
# feature flag is only a compile-time switch for the new module.
default = ["upstream-hyper"]
upstream-hyper = ["dep:hyper", "dep:hyper-util", "dep:http", "dep:http-body", "dep:http-body-util", "dep:futures-util", "dep:tokio-rustls", "dep:rustls", "dep:rustls-pki-types", "dep:webpki-roots", "dep:socket2"]
# Stub gate for callers that want to disable just this client (e.g.
# downstream consumers building with `default-features = false`).
upstream-stub = []
# Allow private/reserved IP addresses in upstream connections (SSRF bypass).
# Used by downstream test harnesses (e.g. openproxy-api-client) that connect
# to localhost mock servers.
ssrf-bypass = []

[dependencies]
openproxy-types = { path = "../openproxy-types" }
openproxy-db = { path = "../openproxy-db" }
openproxy-compression = { path = "../openproxy-compression" }
openproxy-adapters = { path = "../openproxy-adapters", features = ["test-utils"] }
openproxy-pipeline = { path = "../openproxy-pipeline" }
tokio = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
# `tokio_util::sync::CancellationToken` lives behind the `rt` feature.
# direct dep so the discovery scheduler can fan out `cancel()` to every
# per-provider task with broadcast semantics. See Gate E1 spec.
tokio-util = { workspace = true, features = ["rt"] }
parking_lot = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
tdigest = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
urlencoding = { workspace = true }
memchr = "2"
# Real BPE tokenizer (cl100k_base — the same tokenizer OpenAI uses for
# GPT-4/GPT-3.5). Used for accurate token estimation when upstream
# providers don't report usage, and for compression savings calculation.
# The vocab is ~1.6MB embedded at compile time; tokenization is ~1-5µs
# per token, fast enough for the hot path.
tiktoken-rs = "0.6"

# --- hyper-based upstream client (Gate 0) ---
# Pinned to versions that are already present in the workspace lockfile
# so disabling the module also disables the direct dep; that keeps
# `cargo build -p openproxy-core --no-default-features` working.
hyper = { version = "1.10", default-features = false, features = ["client", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "tokio", "http1", "http2"], optional = true }
http = { version = "1", optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", default-features = false, features = ["channel"], optional = true }
bytes = "1"
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-service = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
# TCP keepalive support for the upstream connector. Used to set
# SO_KEEPALIVE on upstream sockets so stale connections are detected
# at the kernel level before hyper's pool hands them out.
socket2 = { version = "0.6", features = ["all"], optional = true }
# TLS for the upstream/ connector. Only the production HTTPS path
# uses these (HTTP uses a plain `tokio::net::TcpStream`). The
# versions track the `tokio-rustls 0.26 / rustls 0.23` pair that
# deps here keeps the feature flag self-contained.
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"], optional = true }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "1", optional = true }
ahash = "0.8.12"

[dev-dependencies]
# Re-enable `tokio`'s `test-util` feature ONLY for the test
# build. The `start_paused` and `advance` helpers on
# `tokio::time` live behind this feature; we use them in the
# discovery scheduler's unit tests to step a paused clock
# through several tick boundaries in microseconds, instead of
# burning wall-clock seconds in `sleep`. Not a runtime
# dep — `cargo build --release` of the production binary
# does NOT pull this in.
tokio = { workspace = true, features = ["test-util"] }
# Benchmark harness for the SSE chunk-forwarding hot path.
# Used by `cargo bench -p openproxy-core --bench sse_fast_path`.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "sse_fast_path"
harness = false

