[package]
name = "openproxy-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
openproxy-types = { path = "../openproxy-types" }
rusqlite = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
