[package]
name = "openproxy-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
openproxy-types = { path = "../openproxy-types" }
openproxy-db = { path = "../openproxy-db" }
openproxy-adapters = { path = "../openproxy-adapters", features = ["test-utils"] }
openproxy-compression = { path = "../openproxy-compression" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
futures-util = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
uuid = { version = "1.8", features = ["v4", "serde"] }
hex = { workspace = true }
sha2 = { workspace = true }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-service = "0.3"
memchr = "2"
once_cell = { workspace = true }
regex = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
chrono = { workspace = true }
