[package]
name = "openproxy-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "openproxy"
path = "src/main.rs"

[lib]
name = "openproxy_server"
path = "src/lib.rs"

[dependencies]
openproxy-core = { path = "../openproxy-core" }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }
http-body = "1"
http-body-util = "0.1"
bytes = "1"
parking_lot = { workspace = true }
# Embeds the dashboard SPA's dist/ bundle into the binary so the
# server ships as a single self-contained executable that serves
# both the API (/v1/*, /admin/api/*) and the dashboard SPA
# (/admin/*, /admin/dist/*). The `mime-guess` feature lets us emit
# the correct Content-Type for each embedded asset; we also pull in
# `mime_guess` directly so the handler in `admin_ui.rs` can call
# `mime_guess::from_path` without going through rust-embed's re-export.
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
# mimalloc as the global allocator. glibc malloc retains freed arenas
# aggressively, which inflates idle RSS for long-running services that
# go through bursts of allocation (migrations, models.dev sync,
# discovery refresh). mimalloc returns memory to the OS more eagerly
# and typically cuts idle RSS 20-40% on Rust services like this one.
# The `default-features = false` avoids pulling in the `libmimalloc-sys`
# `extended` build flags we don't need. `mimalloc::heap_trim()` is
# available without extra feature flags and is called from a periodic
# background sweep to force arena return to the OS after bursts.
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
rusqlite = { workspace = true }
# `async_trait` is required by the Gate-C E2E test
# (`tests/e2e_models_discovery.rs`) for the in-file
# `TestMockAdapter` impl. The `ProviderAdapter` trait (defined in
# `openproxy-core`) keeps `#[async_trait]` for dyn-safety — see the
# trait's doc comment in `crates/openproxy-core/src/adapters.rs` for
# the full rationale. Any `impl ProviderAdapter for ...` must also
# carry `#[async_trait]` to match the trait's desugared method
# signatures, so this dev-dep stays even after the edition-2024
# upgrade.
async-trait = { workspace = true }
# Used by the Gate-C E2E integration test
# (`tests/e2e_models_discovery.rs`) to get an isolated on-disk
# SQLite directory per test run. Pulls in a couple of `remove_*`
# helpers as a side effect — fine, this is a test-only dep.
tempfile = "3"
