[package]
name = "openproxy-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "openproxy"
path = "src/main.rs"

[lib]
name = "openproxy_server"
path = "src/lib.rs"

[dependencies]
openproxy-core = { path = "../openproxy-core" }
openproxy-pipeline = { path = "../openproxy-pipeline" }
openproxy-adapters = { path = "../openproxy-adapters" }
openproxy-types = { path = "../openproxy-types" }
openproxy-db = { path = "../openproxy-db" }
openproxy-compression = { path = "../openproxy-compression" }
tokio = { workspace = true }
# The `multipart` feature is required for the
# `POST /v1/audio/transcriptions` (Whisper) handler, which uses
# `axum::extract::Multipart` to parse the incoming `multipart/form-data`
# body. The `ws` feature powers the live-logs WebSocket at `/admin/ws`.
axum = { workspace = true, features = ["ws", "multipart"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Whisper request to the upstream `/audio/transcriptions` endpoint).
# The `json`/`stream`/`rustls` features match the workspace defaults.
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }
http-body = "1"
http-body-util = "0.1"
bytes = "1"
parking_lot = { workspace = true }
# Embeds the dashboard SPA's dist/ bundle into the binary so the
# server ships as a single self-contained executable that serves
# both the API (/v1/*, /admin/api/*) and the dashboard SPA
# (/admin/*, /admin/dist/*). The `mime-guess` feature lets us emit
# the correct Content-Type for each embedded asset; we also pull in
# `mime_guess` directly so the handler in `admin_ui.rs` can call
# `mime_guess::from_path` without going through rust-embed's re-export.
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
# mimalloc as the global allocator. glibc malloc retains freed arenas
# aggressively, which inflates idle RSS for long-running services that
# go through bursts of allocation (migrations, models.dev sync,
# discovery refresh). mimalloc returns memory to the OS more eagerly
# and typically cuts idle RSS 20-40% on Rust services like this one.
#
# The `extended` feature enables `libmimalloc-sys`'s extended build,
# which exposes `mi_collect(force)` via FFI. We call `mi_collect(false)`
# from a 60-second background sweep in `state.rs` to force mimalloc to
# return abandoned arenas to the OS immediately (rather than waiting
# for mimalloc's ~1s automatic decay). This is the primary fix for
# the "instant 20MB jump" symptom under burst allocation: after a
# large SSE response or discovery refresh, mimalloc holds onto freed
# arenas for its decay window, inflating RSS even though the memory
# is logically free. `mi_collect(false)` is cheap (~microseconds when
# there's nothing to trim) and safe to call from a tokio task.
#
# NOTE: `mi_collect` is NOT a garbage collector. Rust's ownership model
# already freed the memory at the language level when values were
# dropped. `mi_collect` just tells mimalloc "return the freed-but-
# retained arenas to the OS now" — equivalent to glibc's `malloc_trim`
# or jemalloc's `je_mallctl("arena.0.purge")`. It's allocator hygiene,
# not GC.
mimalloc = { version = "0.1", default-features = false, features = ["extended"] }
# Direct dep on libmimalloc-sys so we can call `mi_collect(false)` from
# the memory-sweep task in state.rs. The `extended` feature exposes
# `mi_collect` (and other extended APIs) via FFI.
libmimalloc-sys = { version = "0.1", default-features = false, features = ["extended"] }
# rusqlite is needed in production code for the analytics query retry
# helper in handlers/admin.rs (the helper takes a `&rusqlite::Connection`
# as a closure parameter). Previously it was only a dev-dependency (for
# tests), but the retry helper needs it at build time.
rusqlite = { workspace = true }
ahash = "0.8.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# Used by the Gate-C E2E integration test
# (`tests/e2e_models_discovery.rs`) to get an isolated on-disk
# SQLite directory per test run. Pulls in a couple of `remove_*`
# helpers as a side effect — fine, this is a test-only dep.
tempfile = "3"
