[package]
name = "openproxy-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tiktoken-rs = "0.6"
chrono = { workspace = true }
bytes = "1"
parking_lot = { workspace = true }
regex = { workspace = true }
