# NOTE: This crate is being phased out. The dashboard SPA it produces is now
# embedded into openproxy-server via rust-embed (see
# `crates/openproxy-server/src/admin_ui.rs`). The frontend source files
# (under src/static/) are still maintained here. The Rust binary in this
# crate (src/lib.rs, src/main.rs, src/api_proxy.rs, src/handlers.rs) is
# DEAD CODE and will be removed in a follow-up commit once we've confirmed
# the embedded-SPA migration is solid.
[package]
name = "openproxy-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "openproxy-web"
path = "src/main.rs"

[lib]
name = "openproxy_web"
path = "src/lib.rs"

[dependencies]
openproxy-api-client = { path = "../openproxy-api-client" }
openproxy-core = { path = "../openproxy-core" }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = "1"
futures = "0.3"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tungstenite = "0.29"
